solved image not showing problem

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section class="mid-section">
       <div class="mission-desc mission-bg">
         <img
-          src="/images/illustration/illustrator-1.png"
+          src="images/illustration/illustrator-1.png"
           alt="1st illustration picture"
         />
         <h3>Mission</h3>
@@ -54,7 +54,7 @@
       </div>
       <div class="mission-desc vission-bg">
         <img
-          src="/images/illustration/illustrator-2.png"
+          src="images/illustration/illustrator-2.png"
           alt="2nd illustration picture"
         />
         <h3>Vission</h3>
@@ -65,7 +65,7 @@
       </div>
       <div class="mission-desc goals-bg">
         <img
-          src="/images/illustration/illustrator-3.png"
+          src="images/illustration/illustrator-3.png"
           alt="3rd illustration picture"
         />
         <h3>Goals</h3>
@@ -80,7 +80,7 @@
     <!-- Dev-Section Start -->
     <section class="dev-section">
       <div class="dev-details">
-        <img src="/images//coding.png" alt="" />
+        <img src="images//coding.png" alt="" />
       </div>
       <div class="dev-details">
         <h1 class="top-heading">Develop Without Limits</h1>
@@ -113,7 +113,7 @@
         >
       </div>
       <div class="community-details">
-        <img src="/images/project.png" alt="" />
+        <img src="images/project.png" alt="" />
       </div>
     </section>
     <!-- Community-Section End -->
