some error fixed

--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
         <i class="far fa-envelope-open fa-3x icon"></i>
         <h3>Important Information</h3>
         <p>
-          <ul>
-            <li><i class="far fa-check-circle check-icon"></i>Refund policy ></li>
-            <li><i class="far fa-check-circle check-icon"></i>Terms & Conditions</li>
-            <li><i class="far fa-check-circle check-icon"></i>Privacy policy ></li>
+          <ul class="unorder-list">
+            <li>Refund policy ></li>
+            <li>Terms & Conditions</li>
+            <li>Privacy policy ></li>
           </ul>
         </p>
       </div>
